--- a/sample_02/css/style02.css
+++ b/sample_02/css/style02.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300&family=Noto+Serif+SC&display=swap');
+
 
 li{
   list-style: none;
@@ -9,14 +10,33 @@ img{
 }
 
 header{
+
   position: fixed;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 32px;
   display: flex;
   align-items: center;
   z-index: 100;
   top: 0;
+
+}
+
+  .custom-font {
+    font-size: 16px; 
+    color: #000000; 
+  }
+
+
+header img[alt="漢"] {
+  top: 5px;
+  margin-left: 12px;
+  width: 56px;
+  height: auto;
+  display: grid;
+  place-content: center;
+  place-items: center;
+
 }
 
 #wave{
@@ -29,28 +49,83 @@ header{
   margin-left: auto;
 }
 
-#menu{
+#menu {
+  display: flex;
+  flex-direction: row;
   position: fixed;
   top: 100px;
-  font-size: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  font-family: 'Long Cang', sans-serif;
   line-height: 1;
-  left: 20px;
+  left: 40px;
+  right: 40px; 
   z-index: 100;
   cursor: pointer;
+  white-space: nowrap;
+  justify-content: space-between; /* 菜单项之间的间距自动调整 */
 }
 
 #content{
+
   position: relative;
   margin: 100px auto;
   padding: 20px;
   max-width: 1000px;
+
+  
 }
 
-.set{
-  background-color: #ccc;
+/* 在CSS中定义一个CSS变量 */
+:root {
+  --border-radius: 3px; 
+}
+
+.set1{
+  background-color: rgba(255, 255, 255, 0.8);
+  min-height: 400px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  border: 2px solid #1b7d84; 
+  border-radius: var(--border-radius); /* 使用CSS变量来设置圆角 */
+
+  /*追加しました。 */
+  position: relative;
+}
+
+
+
+.set1 img.篆 {
+  width: 12%; /* 图片宽度相对于包含元素的12% */
+  height: auto;
+  top: 300px; 
+  left: 60%; 
+  position: absolute; /* relative;をabsoluteに変更*/
+}
+
+.set1 img.传抄古文 {
+  width: 14%; 
+  top: 18%; 
+  left: 18%; 
+  position: absolute; /* relative;をabsoluteに変更*/
+}
+
+.set2{
+  background-color: rgba(223, 246, 240, 0.8);
   min-height: 400px;
   margin-bottom: 40px;
+}
+
+.set201{
+  background-color: rgba(255, 255, 255, 1);
+  height: 150px;
+  width: 200px;
+  border: 1px solid #1b7d84; 
+  border-radius: var(--border-radius); 
+  margin-bottom: 40px;
+  position: absolute;
+  margin-top: 8%;
+  margin-left: 5%
+  
 }
 
 body.one #backimg01,
@@ -65,28 +140,15 @@ body.three #backimg03{
   height: 100%;
   top: 0;
   left: 0;
-  background: #fcfcfc;
+  background: #ffffff;
 }
 
-.backimg{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: 1s all;
-}
 
-img{
+
+/* imgだとページ内の全画像に適用されてしまうので imgから .backimg img に変更*/
+.backimg img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-#line{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 3px;
-  background: linear-gradient(to right, blue,red);
-}
